--- a/ProfessionalEvaluation.Website/Views/Assesment/Index.cshtml
+++ b/ProfessionalEvaluation.Website/Views/Assesment/Index.cshtml
@@ -37,12 +37,14 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
+                <!-- 
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                -->
                 <a class="navbar-brand" href="#">Evaluación Profesional</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -92,55 +94,7 @@
             <!-- /.row -->
 
             <!-- Page Features -->
-            <div class="row text-center">
-
-                <div class="col-md-3 col-sm-6 hero-feature">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <h3 id="section1_name"></h3>
-                            <p id="section1_description"></p>
-                            <p>
-                                Duración: <span id="section1_duration"></span>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-3 col-sm-6 hero-feature">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <h3>Lógica de Programación</h3>
-                            <p>Esta prueba mide la capacidad para crear, entender y modificar algoritmos.</p>
-                            <p>
-                                Duración: 2 horas
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-3 col-sm-6 hero-feature">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <h3>Pruebas Unitarias: Ejecución</h3>
-                            <p>Esta prueba permite determinar la forma como realiza las pruebas unitarias.</p>
-                            <p>
-                                Duración: 1 hora
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-3 col-sm-6 hero-feature">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <h3>Metodologías de desarrollo</h3>
-                            <p>Esta prueba mide conceptualización y experiencia en trabajo con equipos de desarrollo.</p>
-                            <p>
-                                Duración: 1 horas
-                            </p>
-                        </div>
-                    </div>
-                </div>
+            <div id="sectionDiv1" class="row text-center">
 
             </div>
             <!-- /.row -->
@@ -170,6 +124,19 @@
     <script src="/js/bootstrap.min.js"></script>
 
     <script>
+
+        var sectionTemplate =  '<div class="col-md-3 col-sm-6 hero-feature">' +
+                                    '<div class="thumbnail" >' +
+                                        '<div class="caption" style="min-height:220px">' +
+                                            '<h3>_section_name</h3>' +
+                                            '<p>_section_description</p>' +
+                                            '<p>' +
+                                                'Duración: _section_duration horas' +
+                                            '</p>' +
+                                        '</div>' +
+                                    '</div>' +
+                                '</div>';
+
         $(document).ready(function () {
 
             function ajaxPost(controller, method, data, fx) {
@@ -201,18 +168,30 @@
                             $("#detail").css("visibility", "visible");
 
                             var totalDuration = 0;
+                            var sectionIndex = 1;
+                            var currentIndex;
+                            var sectionsPerRow = 4;
                             for (var i = 0; i < data.length; i++) {
+
+                                if (i%sectionsPerRow == 0) {
+                                    $("#detail").append('<div id="sectionDiv' + sectionIndex + '" class="row text-center"></div>');
+                                    currentIndex = sectionIndex;
+                                    sectionIndex = sectionIndex + 1;
+                                }
+
+                                var sectionText = sectionTemplate.replace("_section_name", data[i].Name)
+                                .replace("_section_description", data[i].Description)
+                                .replace("_section_duration", data[i].EstimatedDuration);
+
+                                $("#sectionDiv" + currentIndex).append(sectionText);
+
                                 if (data[0].EstimatedDuration) {
-                                    totalDuration = totalDuration + data[0].EstimatedDuration;
+                                    totalDuration = totalDuration + data[i].EstimatedDuration;
                                 }
                             }
 
                             $("#duration").css("visibility", "visible");
                             $("#duration").html("Duración estimada: " + totalDuration + " horas");
-
-                            $("#section1_name").html(data[0].Name);
-                            $("#section1_description").html(data[0].Description);
-                            $("#section1_duration").html(data[0].EstimatedDuration + " hora");
                         }
 
                     }
