--- a/ProfessionalEvaluation.Website/Views/Assesment/Execution.cshtml
+++ b/ProfessionalEvaluation.Website/Views/Assesment/Execution.cshtml
@@ -30,8 +30,8 @@
 
             <!-- Header -->
             <header >
-                <h3 id="title"></h3>
-                <h4 >50% Completado - Pregunta 1 de 2</h4>
+                <p id="title"></p>
+                <p>0% Completado - Pregunta 1 de 2</p>
             </header>
 
             <h3 class="mark">1.¿Qué te ha gustado más?</h3>
