--- a/ProfessionalEvaluation.Website/Views/Assesment/Execution.cshtml
+++ b/ProfessionalEvaluation.Website/Views/Assesment/Execution.cshtml
@@ -24,6 +24,17 @@
             <div id="duration">
 
             </div>
+
+            <hr />
+
+            <p>0% Completado - Pregunta 1 de 2</p>
+
+            <p>
+                Te quedan 59 minutos
+            </p>
+
+            
+            
         </div>
 
         <div class="col-md-9">
@@ -31,7 +42,7 @@
             <!-- Header -->
             <header >
                 <p id="title"></p>
-                <p>0% Completado - Pregunta 1 de 2</p>
+                
             </header>
 
             <h3 class="mark">1.¿Qué te ha gustado más?</h3>
@@ -72,8 +83,8 @@
                             }
                         }
 
-                        $("#duration").css("visibility", "visible");
-                        $("#duration").html("Duración: " + totalDuration + " horas");
+                        //$("#duration").css("visibility", "visible");
+                        //$("#duration").html("Duración: " + totalDuration + " horas");
                     }
 
                 }
